--- a/package.json
+++ b/package.json
@@ -19,5 +19,5 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://ivanlhz.github.io/reactdatatable"
+  "homepage": "https://ivanlhz.github.io/ReactDataTable"
 }
